# parrot.py

./: .gitignore  flake.nix  pyproject.toml
